# cookiecutter-namespace-template

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  cookiecutter.json  environment.yml  mkdocs.yml  pyproject.toml  setup_project.sh  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  pypi-release-checklist.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
